build: Fix changelog generation logic
* Also run the script during GSI compilation
* Cleanup

Change-Id: I50701f1720ae466bb4fb04760885528d3c49b3a5

--- a/core/Makefile
+++ b/core/Makefile
@@ -1251,7 +1251,6 @@ define build-image-kernel-modules
 endef
 
 define build-recoveryramdisk
-  @echo "Generating Changelog"
   $(hide) ./vendor/aosp/tools/changelog.sh
   $(hide) mv $(PRODUCT_OUT)/Changelog.txt $(PRODUCT_OUT)/$(CUSTOM_VERSION)-Changelog.txt
   @echo ----- Making recovery image ------
@@ -1493,6 +1492,8 @@ endif
 
 # $(1): output file
 define build-systemimage-target
+  $(hide) ./vendor/aosp/tools/changelog.sh
+  $(hide) mv $(PRODUCT_OUT)/Changelog.txt $(PRODUCT_OUT)/$(CUSTOM_VERSION)-Changelog.txt
   @echo "Target system fs image: $(1)"
   $(call create-system-vendor-symlink)
   @mkdir -p $(dir $(1)) $(systemimage_intermediates) && rm -rf $(systemimage_intermediates)/system_image_info.txt
